--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <h1>
 <a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h1>
 
-<p>Development began December 2015, with a planned release date in February 2016.</p>
+<p>Development began December 2015, and AwareOSU 1.0 was released on January 9th, 2016. Download it <a href="https://play.google.com/store/apps/details?id=awareosu.example.cailin.awareosu">here</a>.</p>
 
 <h1>
 <a id="features" class="anchor" href="#features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Features</h1>
