--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <a id="whats-going-on-with-the-code" class="anchor" href="#whats-going-on-with-the-code" aria-hidden="true"><span class="octicon octicon-link"></span></a>What's going on with the code?</h1>
 
 <h3>
-<a id="there-are-three-activities" class="anchor" href="#there-are-three-activities" aria-hidden="true"><span class="octicon octicon-link"></span></a>There are three activities:</h3>
+<a id="there-are-two-activities" class="anchor" href="#there-are-two-activities" aria-hidden="true"><span class="octicon octicon-link"></span></a>There are two activities:</h3>
 
 <ul>
 <li>
@@ -81,17 +81,6 @@
 <p>Second screen the user is presented with, displays crime information and allows user to view map of crime locations, choose date to view crime information, or access settings page.</p>
 
 <p><img src="https://raw.githubusercontent.com/CailinPitt/AwareOSUAndroid/master/Images/main.png" alt="Main Activity" width="250" height="445"></p>
-</li>
-</ul>
-</li>
-<li>
-<p>UserSettingsActivity</p>
-
-<ul>
-<li>
-<p>Settings activity, allow user to specify notification preference.</p>
-
-<p><img src="https://raw.githubusercontent.com/CailinPitt/AwareOSUAndroid/master/Images/settings.png" alt="Settings" width="250" height="445"></p>
 </li>
 </ul>
 </li>
