--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <body>
     <div class="wrapper">
       <header>
+        
+        <img src="https://raw.githubusercontent.com/CailinPitt/AwareOSUAndroid/master/Images/AwareOSULogo.png" width="400px" />
+        
         <h1>AwareOSU</h1>
         <p>AwareOSU Android application</p>
 
