--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
     <div class="wrapper">
       <header>
         
-        <img src="https://raw.githubusercontent.com/CailinPitt/AwareOSUAndroid/master/Images/AwareOSULogo.png" width="400px" />
+        <img src="https://raw.githubusercontent.com/CailinPitt/AwareOSUAndroid/master/Images/AwareOSULogo.png"/>
         
-        <h1>AwareOSU</h1>
         <p>AwareOSU Android application</p>
 
         <p class="view"><a href="https://github.com/CailinPitt/AwareOSUAndroid">View the Project on GitHub <small>CailinPitt/AwareOSUAndroid</small></a></p>
@@ -43,7 +42,7 @@
 <h1>
 <a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h1>
 
-<p>Development began December 2015, and AwareOSU 1.0 was released on January 9th, 2016. Download it <a href="https://play.google.com/store/apps/details?id=awareosu.example.cailin.awareosu">here</a>.</p>
+<p>Development began December 2015, and version 1.0 was released on January 9th, 2016. Download it <a href="https://play.google.com/store/apps/details?id=awareosu.example.cailin.awareosu">here</a>.</p>
 
 <h1>
 <a id="features" class="anchor" href="#features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Features</h1>
